# internal/app/trening/handlers/handler.go
@@ -76,22 +76,66 @@ func (s *service) DetailParametersUser(ctx context.Context, request *models.Deta
 	return
 }
 
-func (t *service) CreateTrening(ctx context.Context, request *models.CreateTreningRequest) (response *models.CreateTreningResponse, err error) {
+func (s *service) CreateTrening(ctx context.Context, request *models.CreateTreningRequest) (response *models.CreateTreningResponse, err error) {
 	return
 }
-func (t *service) ListTrening(ctx context.Context, request *models.ListTreningRequest) (response *models.ListTreningResponse, err error) {
+func (s *service) ListTrening(ctx context.Context, request *models.ListTreningRequest) (response *models.ListTreningResponse, err error) {
 	return
 }
-func (t *service) DetailTrening(ctx context.Context, request *models.DetailTreningRequest) (response *models.DetailTreningResponse, err error) {
+func (s *service) DetailTrening(ctx context.Context, request *models.DetailTreningRequest) (response *models.DetailTreningResponse, err error) {
 	return
 }
-func (t *service) CreateExercise(ctx context.Context, request *models.CreateExerciseRequest) (response *models.CreateExerciseResponse, err error) {
+
+func (s *service) CreateExercise(ctx context.Context, request *models.CreateExerciseRequest) (response *models.CreateExerciseResponse, err error) {
+
+	if err = s.repo.CreateExercise(ctx, &data.Exercise{
+		UserID:              request.UserID,
+		Name:                request.Name,
+		Duration:            request.Duration,
+		Relax:               request.Duration,
+		Count:               request.Count,
+		NumberOfSets:        request.NumberOfSets,
+		NumberOfRepetitions: request.NumberOfRepetitions,
+		Type:                int32(request.Type),
+	}); err != nil {
+
+		s.logger.Error("unable to insert exercise to database", "error", err)
+		return nil, err
+	}
+
+	response = &models.CreateExerciseResponse{
+		Status: true,
+	}
 	return
 }
-func (t *service) ListExercise(ctx context.Context, request *models.ListExerciseRequest) (response *models.ListExerciseResponse, err error) {
+
+// ListExercise ...
+func (s *service) ListExercise(ctx context.Context, request *models.ListExerciseRequest) (response *models.ListExerciseResponse, err error) {
+
+	res, err := s.repo.ListExercise(ctx, request.UserID)
+	if err != nil {
+		s.logger.Error("unable to get exercise to database", "error", err)
+		return nil, err
+	}
+	response.Data = make([]*models.Exercise, len(res))
+	for i, e := range res {
+		response.Data[i] = &models.Exercise{
+			UID:                 e.UID,
+			Name:                e.Name,
+			Duration:            e.Duration,
+			Relax:               e.Relax,
+			Count:               e.Count,
+			NumberOfSets:        e.NumberOfSets,
+			NumberOfRepetitions: e.NumberOfRepetitions,
+			Type:                models.ExerciseType(e.Type),
+		}
+	}
+	response.Status = true
+
 	return
 }
-func (t *service) DetailExercise(ctx context.Context, request *models.DetailExerciseRequest) (response *models.DetailExerciseResponse, err error) {
+
+func (s *service) DetailExercise(ctx context.Context, request *models.DetailExerciseRequest) (response *models.DetailExerciseResponse, err error) {
 	return
 }
 
